codegen/5.1.0/docs/View.md
# View

## Properties
Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Id** | **int32** | The unique ID of the view. | [optional] [default to null]
**Guid** | **string** | The unique GUID of the view. | [optional] [default to null]
**Name** | **string** | The unique name of the view. | [optional] [default to null]
**Path** | **string** | File system path. Begin with &#x27;/&#x27;. Do not include a trailing slash. | [default to null]
**CreateDir** | **bool** | If true, creates the directory specified by the path. | [optional] [default to null]
**Alias** | **string** | Alias for NFS export. The alias must start with &#x27;/&#x27; and can include ASCII characters only. If configured, this setting supersedes the exposed NFS export path. | [optional] [default to null]
**Bucket** | **string** | S3 bucket name. | [optional] [default to null]
**PolicyId** | **int32** | The ID of the QoS policy associated with the view. | [optional] [default to null]
**Cluster** | **string** | Parent cluster. | [optional] [default to null]
**ClusterId** | **int32** | Parent cluster ID. | [optional] [default to null]
**TenantId** | **int32** | The ID of the tenant associated with this view. | [optional] [default to null]
**Directory** | **bool** | If true, creates the directory if it does not exist. | [optional] [default to null]
**S3Versioning** | **bool** | Enables or disables S3 versioning. | [optional] [default to null]
**S3UnverifiedLookup** | **bool** | Allows or prohibits S3 Unverified Lookup. | [optional] [default to null]
**AllowAnonymousAccess** | **bool** | Allow S3 anonymous access | [optional] [default to null]
**AllowS3AnonymousAccess** | **bool** | Allows or prohibits S3 anonymous access. | [optional] [default to null]
**Protocols** | **[]string** | Protocols exposed by this view. | [optional] [default to null]
**Share** | **string** | Name of the SMB share. The name cannot not include the following characters: \&quot; \\ / [ ] : | &lt; &gt; + &#x3D; ; , * ? | [optional] [default to null]
**BucketOwner** | **string** | S3 bucket owner. | [optional] [default to null]
**BucketCreators** | **[]string** | A list of bucket creator users. | [optional] [default to null]
**BucketCreatorsGroups** | **[]string** | A list of bucket creator groups. | [optional] [default to null]
**S3Locks** | **bool** | Enables or disables S3 object locks. | [optional] [default to null]
**S3LocksRetentionMode** | **string** | S3 locks retention mode. | [optional] [default to null]
**S3LocksRetentionPeriod** | **string** | Retention period for S3 locks. The period is specified as a positive integer suffixed by a time unit of measure, for example: 0d|2d|1y|2y | [optional] [default to null]
**PhysicalCapacity** | **int64** | Physical capacity. | [optional] [default to null]
**LogicalCapacity** | **int64** | Logical capacity. | [optional] [default to null]
**NfsInteropFlags** | **string** | Indicates whether the view supports simultaneous access using NFSv3/NFSv4/SMB protocols. | [optional] [default to null]
**IsRemote** | **bool** |  | [optional] [default to null]
**ShareAcl** | [***ViewShareAcl**](View_share_acl.md) |  | [optional] [default to null]
**QosPolicyId** | **int32** | The ID of the QoS policy associated with the view. | [optional] [default to null]
**IsSeamless** | **bool** | Enables or disables support for  seamless failover between replication peers by syncing file handles between the view and remote views on the replicated path on replication peers. This enables NFSv3 client users to retain the same mount point to the view in the event of a failover of the view path to a replication peer. Enabling this option may cause overhead and should only be done when the use case is relevant. To complete the configuration for seamless failover between any two peers, a seamless view must be created on each peer. | [optional] [default to null]
**MaxRetentionPeriod** | **string** | Applicable if locking is enabled. Sets a maximum retention period for files that are locked in the view. Files cannot be locked for longer than this period, whether they are locked manually (by setting the atime) or automatically, using auto-commit. Specify as an integer value followed by a letter for the time unit (m - minutes, h - hours, d - days, y - years). Example: 2y (2 years). | [optional] [default to null]
**MinRetentionPeriod** | **string** | Applicable if locking is enabled. Sets a minimum retention period for files that are locked in the view. Files cannot be locked for less than this period, whether locked manually (by setting the atime) or automatically, using auto-commit. Specify as an integer value followed by a letter for the time unit (h - hours, d - days, m - months, y - years). Example: 1d (1 day). | [optional] [default to null]
**FilesRetentionMode** | **string** | Applicable if locking is enabled. The retention mode for new files. For views enabled for NFSv3 or SMB, if locking is enabled, &#x27;files_retention_mode&#x27; must be set to &#x27;GOVERNANCE&#x27; or &#x27;COMPLIANCE&#x27;. If the view is enabled for S3 and not for NFSv3 or SMB, &#x27;files_retention_mode&#x27; can be set to &#x27;NONE&#x27;. If set to &#x27;GOVERNANCE&#x27;, locked files cannot be deleted or changed. The retention period can be shortened or extended by users with sufficient permissions. If set to &#x27;COMPLIANCE&#x27;, locked files cannot be deleted or changed. The retention period can be extended, but not shortened, by users with sufficient permissions. If set to &#x27;NONE&#x27; (S3 only), the retention mode is not set for the view; it is set individually for each object. | [optional] [default to null]
**DefaultRetentionPeriod** | **string** | Relevant if locking is enabled. Required if &#x27;s3_locks_retention_mode&#x27; is set to &#x27;GOVERNANCE&#x27; or &#x27;COMPLIANCE&#x27;. Specifies a default retention period for objects in the bucket. If set, object versions that are placed in the bucket are automatically protected with the specified retention lock. Otherwise, by default, each object version has no automatic protection but can be configured with a retention period or legal hold. Specify as an integer followed by h for hours, d for days, m for months, or y for years. For example: 2d or 1y. | [optional] [default to null]
**AutoCommit** | **string** | Applicable if locking is enabled. Sets the auto-commit time for files that are locked automatically. These files are locked automatically after the auto-commit period elapses from the time the file is saved. Files locked automatically are locked for the default retention period, after which they are unlocked. Specify as an integer value followed by a letter for the time unit (h - hours, d - days, y - years). Example: 2h (2 hours). | [optional] [default to null]
**S3ObjectOwnershipRule** | **string** | S3 Object Ownership lets you set ownership of objects uploaded to a given bucket and to determine whether ACLs are used to control access to objects within this bucket. A bucket can be configured with one of the following object ownership rules: &#x27;BucketOwnerEnforced&#x27; - The bucket owner has full control over any object in the bucket. &#x27;ObjectWriter&#x27; - The user that uploads an object has full control over this object. ACLs can be used to let other users access the object. &#x27;BucketOwnerPreferred&#x27; - The bucket owner has full control over new objects uploaded to the bucket by other users. ACLs can be used to control access to the objects. &#x27;None&#x27; - S3 Object Ownership is disabled for the bucket. | [optional] [default to null]
**Locking** | **bool** | Enables or disables Write Once Read Many (WORM) locking. | [optional] [default to null]
**IgnoreOos** | **bool** | Ignore oos | [optional] [default to null]
**AbacTags** | **[]string** | A list of Attribute-Based Access Control (ABAC) tags. This option can be used only when using SMB/NFSv4 protocols. | [optional] [default to null]
**KafkaVipPools** | **[]int32** | For Kafka-enabled views, an array of IDs of Virtual IP pools used to access event topics exposed by the view. The specified virtual IP pool must belong to the same tenant as the Kafka-enabled view. Must also not be a virtual IP pool that is excluded by the view policy’s virtual IP pool association. | [optional] [default to null]
**KafkaRejoinGroupTimeoutSec** | **int32** | Kafka rejoin group timeout, in seconds. | [optional] [default to null]
**KafkaFirstJoinGroupTimeoutSec** | **int32** | Kafka first join group timeout, in seconds. | [optional] [default to null]

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)

